[gd_scene load_steps=2 format=3 uid="uid://dorsyyosso2gh"]

[ext_resource type="Script" path="res://gui/chat/chat.gd" id="1_aepgc"]

[node name="Chat" type="Control"]
layout_mode = 3
anchor_right = 0.247
anchor_bottom = 0.471
offset_right = -0.160004
offset_bottom = -0.120026
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aepgc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 316.0
offset_bottom = 261.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
placeholder_text = "Message"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="HideTimeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="text_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="HideTimeout" to="." method="_on_hide_timeout_timeout"]
